objects/CSS_AddnlAudit__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>CSS AddnlAudit</label>
    <listViews>
        <fullName>CMI_View</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Audit__c</columns>
        <columns>Field_API_Name__c</columns>
        <columns>Object_API_Name__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>CMI View</label>
        <language>en_US</language>
    </listViews>
</CustomObject>